Rework after copilot comment
Signed-off-by: Alexander Schwartz <alexander.schwartz@gmx.net>